# checker

./: CMakeLists.txt  CheckerWidget.cpp  CheckerWidget.h  GameEngine.cpp  GameEngine.h  GameTypes.h  README.md  checkergame.cpp  checkergame.h  gamewidget.cpp  gamewidget.h  main.cpp  resources.qrc  高级语言程序设计实验报告.docx
